# m17n-contrib

./: Makefile  README.md  bug712120-Add-Rupee-sign-inscript-maps.patch  hi-remington-enhancements-653782.patch  kn-typewriter.mim  m17n-contrib.spec  mai-inscript.mim  ml-inscript-semicolon-653783.patch  ta-tamil99-enhancement-653781.patch  te-inscript-642138.patch
src/: AUTHORS  Makefile.am  Makefile.in  README  bootstrap.sh  configure  configure.ac
src/m4/: ChangeLog
src/po/: ChangeLog  LINGUAS  POTFILES.in  de.gmo  de.po  eo.gmo  m17n-contrib.pot
